--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </nav>
     </header>
     <main>
+        <div class="gap"></div>
         <section class="hero">
             <div class="content">
                 <h2>ONLINE LEARNING</h2>
